# episteme

./: .gitignore  .release-please-manifest.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.es.md  README.ko.md  README.md  README.zh.md  SECURITY.md  llms.txt  pyproject.toml  release-please-config.json  replace.sh  setup.py
.claude-plugin/: README.md  marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  clone.yml  release-assets.yml  release-please.yml
adapters/claude/: README.md
adapters/codex/: README.md
adapters/cursor/: README.md
adapters/hermes/: README.md
app/: Cargo.toml  README.md
app/icon/: episteme.icns  make_icns.swift
app/src/: main.rs
benchmarks/cognitive-lift-baseline/: CALIBRATION_NOTES.md  README.md
contracts/: README.md  example.openapi.yaml
core/: runtime_manifest.json
core/adapters/: README.md  omo.json  omx.json
core/agents/: README.md  docs-handoff.md  reviewer.md
core/blueprints/: architectural_cascade.yaml
core/harnesses/: agent-system.json  cli-tool.json  data-pipeline.json  generic.json  ml-research.json  python-library.json  research-notebook.json  web-app.json
core/hooks/: _arm_a_post.py  _arm_a_pre.py  _blueprint_d.py  _cascade_detector.py  _cascade_synthesis.py  _chain.py  _derived_knobs.py  _fence_synthesis.py  _framework.py  _guidance.py  _interrogation.py  _irreversible_tier.py  _marker_reaper.py  _scenario_detector.py  _specificity.py  _spot_check.py  block_dangerous.py  calibration_telemetry.py  checkpoint.py  conclusion_gate.py  conclusion_guard.py  contract_gate.py  episodic_writer.py  fence_synthesis.py  precompact_backup.py  reasoning_surface_guard.py  session_context.py  workflow_guard.py
core/practice/: __init__.py  cognitive_moves.py  irreversible_tier.py  quality.py
core/ptsp/: __init__.py  canonical.py  context_injection.py  promotion.py  seal.py  types.py
core/signing/: __init__.py  canonical_surface.py  ed25519_compat.py  transparency.py  tsa.py
demos/03_differential/: README.md
demos/04_symbiosis/: DIFF.md  README.md
demos/05_contract_gate/: README.md  decision-trace.md  handoff.md  reasoning-surface.json  verification.md
docs/: ADAPTER_PORTABILITY.md  AGENT_OS_ARCHITECTURE.md  ANTHROPIC_MANAGED_AGENTS_BRIDGE.md  ARCHITECTURE.md  COGNITIVE_SYSTEM_PLAYBOOK.md  COMMANDS.md  COMPLIANCE_CROSSWALK.md  CONTRACT_GATE.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEFERRED_DISCOVERIES_TRIAGE.md  DEMOS.md  DESIGN_V0_11_PHASE_12.md  DESIGN_V1_0_SEMANTIC_GOVERNANCE.md  DESIGN_V2_0_EPISTEMIC_ENGINE.md  DISCRIMINATOR_CALIBRATION.md  EVALUATION_METHOD.md  EVOLUTION_CONTRACT.md  HARNESSES.md  HOOKS.md  HOW_TO_AUTHOR_SIGNED_SURFACE.md  HOW_TO_VERIFY_EVIDENCE_PACKET.md  LAYER_MODEL.md  LIVE_REKOR_DECISION.md  MARKETING_COPY_DRAFT.md  MEMORY_CONTRACT.md  NARRATIVE.md  NEXT_STEPS.md  OPEN_SOURCE_YOUR_PROFILE.md  OSF_PRE_REGISTRATION_DRAFT.md  PLAN.md  POST_SOAK_MIGRATION_PLAN.md  POST_SOAK_TRIAGE.md  PRD_EPISTEMIC_SYNTHESIS.md  PRD_WORKSTYLE_PROFILER.md  PREPARED_PATCHES.md  PRIVATE_ANALYSIS_PI_VS_EPISTEME.md  PRODUCTIZATION_PLAN.md  PROGRESS.md  PROPOSAL_TIERED_IRREVERSIBLE_GATE.md  (+10 more)
docs/assets/: demo_posture.cast  (+2 more)
hooks/: hooks.json
kernel/: ACTIVE_GUIDANCE_RANKING.md  ARTIFACT_TAXONOMY.md  CALIBRATION_TELEMETRY.md  CHAIN_RECOVERY_PROTOCOL.md  CHANGELOG.md  CONSTITUTION.md  DESIGN_BEHAVIOR_INVARIANTS.md  FAILURE_MODES.md  FALSIFIABILITY_CONDITIONS.md  HOOKS_MAP.md  KERNEL_LIMITS.md  MANIFEST.sha256  MEMORY_ARCHITECTURE.md  OPERATOR_PROFILE_SCHEMA.md  PATTERN_GOVERNANCE.md  PHASE_12_LEXICON.md  README.md  REASONING_SURFACE.md  REFERENCES.md  SUMMARY.md  SYSTEM_1_COUNTERS.md
packaging/episteme-kernel-stub/: README.md  pyproject.toml
packaging/episteme-kernel-stub/src/episteme_kernel/: __init__.py
scripts/: README.md  build_app_pkg.sh  demo_posture.sh  demo_symbiosis.sh
tests/: doc_references_baseline.txt  test_adapter_registry.py  test_arm_a_auto_instrumentation.py  test_audit_test_env_tag.py  test_bench_grade.py  test_bench_report.py  test_bench_run.py  test_bench_task.py  test_block_dangerous.py  test_blueprint_d_cascade.py  test_calibration_telemetry.py  test_cascade_synthesis_end_to_end.py  test_chain_and_framework.py  test_chain_recover.py  test_check_new.py  test_checkpoint.py  test_cognitive_budget.py  test_commands_doc_drift.py  test_conclusion_trigger.py  test_deferred_resolution.py  test_derived_knobs.py  test_dev_watch.py  test_doc_budget.py  test_doc_lifecycle.py  test_doc_map.py  test_doc_references.py  test_doctor_platform_and_wire.py  test_e2e_evidence_pipeline.py  test_episodic_writer.py  test_evaluate_cli.py  test_event171_wired_mechanisms.py  test_evidence_cli.py  test_evolve_friction.py  test_fence_reconstruction_end_to_end.py  test_fresh_user_journey.py  test_global_memory_v3.py  test_guidance_ranking_audit.py  test_hook_cognitive_move_messages.py  test_hook_tier1_dispatch.py  test_install_memory.py  (+47 more)
tools/: discriminator_calibration.py  fence_marker_cleanup.py  gate28_preaudit.py  grade_gates.py  sample_deferred.py
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
(+340 files in other folders)
