[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-os"
version = "0.2.0"
description = "cognitive-os: cognitive + execution harness for AI coding agents across Claude Code, Codex, Cursor, and Hermes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
keywords = [
  "claude-code", "ai-agents", "llm", "developer-tools",
  "automation", "workflow", "hermes", "codex", "dotfiles"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/junjslee/cognitive-os"
Repository = "https://github.com/junjslee/cognitive-os"
Issues = "https://github.com/junjslee/cognitive-os/issues"

[project.scripts]
cognitive-os = "agent_os.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
