[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "episteme"
version = "1.2.0-rc1"
description = "episteme: epistemic control plane for AI coding agents across Claude Code, Codex, Cursor, and Hermes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
keywords = [
  "claude-code", "ai-agents", "llm", "developer-tools",
  "automation", "workflow", "hermes", "codex", "dotfiles"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/junjslee/episteme"
Repository = "https://github.com/junjslee/episteme"
Issues = "https://github.com/junjslee/episteme/issues"

[project.scripts]
episteme = "episteme.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# `src` for `import episteme`; `.` for `from core.hooks import X` — the hook
# layer lives at `core/hooks/` (not packaged under `src/` because hooks are
# invoked as standalone scripts by the host runtime). Adding `.` makes the
# repo root resolve `core` as a namespace package so stock venvs collect
# the hook tests without a conftest.py or __init__.py scaffolding. Closes
# the out-of-box-pytest gap for `core.hooks` imports that the v0.11.0 fix
# left behind (RC checklist item #2 extension; deferred_discoveries #8 from
# the v1.0-rc-cp1 Blueprint-D cascade).
pythonpath = ["src", "."]
testpaths = ["tests"]
